--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
           <h1 id="project_title">Waagaga!</h1>
           <h2 id="project_tagline">The superfood grocery.</h2>
-          <img src="https://cloud.githubusercontent.com/assets/9079667/6847950/a963c4ec-d3a0-11e4-91ed-37fb3f7137e8.png">
+          <img src="https://cloud.githubusercontent.com/assets/9079667/6847950/a963c4ec-d3a0-11e4-91ed-37fb3f7137e8.png" height=200 width=200>
 
         </header>
     </div>
