--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <header class="inner">
       
 
-          <h1 id="project_title">Waagaga!</h1>
+          <h1 id="project_title">Waagaga!</h1><img src="https://cloud.githubusercontent.com/assets/9079667/6847950/a963c4ec-d3a0-11e4-91ed-37fb3f7137e8.png" height=25 width=25>
+
           <h2 id="project_tagline">The superfood grocery.</h2>
-          <img src="https://cloud.githubusercontent.com/assets/9079667/6847950/a963c4ec-d3a0-11e4-91ed-37fb3f7137e8.png" height=200 width=200>
 
         </header>
     </div>
