--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Waaga-ga: Superfood, Super Fast</title>
+    <title>Waaga-Ga: Superfood, Super Fast</title>
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <!-- Google Web Fonts -->
@@ -41,14 +41,14 @@
         <div class="header-overlay">
             <div class="container">
                 <!-- Logo Starts -->
-                <div data-scroll-reveal="enter top and move 50px over 1.2s" class="hexagon">
-                    <i class="fa fa-flash"></i><span></span>
+                <div data-scroll-reveal="enter top and move 50px over 1.2s">
+                    <img src="https://cloud.githubusercontent.com/assets/9079667/6847950/a963c4ec-d3a0-11e4-91ed-37fb3f7137e8.png" height=50 width=50><span></span>
                 </div>
                 <!-- Logo Ends -->
                 <!-- Main Heading Starts -->
                 <div class="main-head">
                     <h2 data-scroll-reveal="enter left and move 50px over 1.8s">
-                        Waaga-ga is the future of lunch.</h2>
+                        Waaga-Ga is the future of lunch.</h2>
                     <p data-scroll-reveal="enter right and move 50px over 2.0s">
                         Healthy and inexpensive like shopping at the supermarket. Fast, tasty and ready-to-eat like your favourite fast foods.</p>
                 </div>
@@ -68,14 +68,14 @@
                 <div class="main-head">
                     <h2 data-scroll-reveal="enter top and move 50px over 1.2s">About Us</h2>
 					<h5 data-scroll-reveal="enter bottom and move 50px over 1.4s">
-                         Waaga-ga takes grocery to the next level, combining the low cost and healthfulness of whole foods from the grocery store with the ready-to-eat convenience of food service.</h5>
+                         Waaga-Ga takes grocery to the next level, combining the low cost and healthfulness of whole foods from the grocery store with the ready-to-eat convenience of food service.</h5>
                     <br />
                 </div>
                 <!-- Main Heading Ends -->
                 <!-- Services List Starts -->
                 <div id="services-blocks" class="row">
                     <div data-scroll-reveal="enter bottom and move 50px over 1.6s" class="col-lg-4 col-md-4 col-sm-12 col-xs-12 sblock">
-                        <span class="fa fa-star-o"></span>
+                        <span class="fa fa-eye"></span>
                         <h4>
                             Healthy</h4>
                         <p>
@@ -91,7 +91,7 @@
                         </p>
                     </div>
                     <div data-scroll-reveal="enter bottom and move 50px over 1.8s" class="col-lg-4 col-md-4 col-sm-12 col-xs-12 sblock">
-                        <span class="fa fa-eye"></span>
+                        <span class="fa fa-star-o"></span>
                         <h4>
                             Convenient</h4>
                         <p>
@@ -110,7 +110,7 @@
             <!-- Main Heading Starts -->
             <div class="main-head">
                 <h2 data-scroll-reveal="enter top and move 50px over 1.2s" class="MT40">
-                    Seeking Regional Master Franchisees</h2>
+                    Inviting Master Franchisees</h2>
             </div>
             <!-- Main Heading Ends -->
             <!-- Form & Address Blocks Starts -->
@@ -133,7 +133,7 @@
                 <!-- Contact Address Starts -->
                 <div data-scroll-reveal="enter right and move 50px over 1.8s" class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <p>
-                        We're currently seeking master franchisees of the Waaga-ga concept in for Central, Western and Atlantic Canada. For more information, contact us today.</p>
+                        We're currently inviting master franchisees of the Waaga-Ga concept to join us in Central, Western and Atlantic Canada. For more information, contact us today.</p>
                 </div>
                 <!-- Contact Address Ends -->
             </div>
@@ -147,7 +147,7 @@
             <!-- Copyright Starts -->
             <div data-scroll-reveal="enter bottom and move 50px over 1.2s">
                 <p data-scroll-reveal="enter over 3.2s">
-                    &copy Waaga-ga 2015.</a>
+                    &copy Waaga-Ga 2015.</a>
                 </p>
             </div>
             <!-- Copyright Ends -->
